# aws-amazon-bedrock-and-gen-ai

./: README.md  my-notes.docx  pyproject.toml
