[tool.poetry]
name = "aws-amazon-bedrock-and-gen-ai"
version = "0.1.0"
description = ""
authors = ["Milind Dalvi <milind.dalvi@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
